--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,16 @@
 </head>
 
 <body class="font-['helvetica_now_display']">
-    <nav class="w-full fixed top-0 left-0 px-5 py-3">
+    <nav class="w-full fixed top-0 left-0 px-5 py-3 flex justify-between">
         <h3 class="text-xl">Scatch</h3>
+        <% var loggedin= typeof loggedin !== "undefined" ? loggedin : "true" %>
+        <% if(loggedin){%>
+            <div class="side gap-5 flex">
+                <a href="/shop">Shop</a>
+                <a href="">Cart</a>
+                <a href="">MyAccount</a>
+                <a href="/users/logout" class="text-red-700">Logout</a>
+            </div>
+        <%} %>
+        
     </nav>
