--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
         <% if(loggedin){%>
             <div class="side gap-5 flex">
                 <a href="/shop">Shop</a>
-                <a href="">Cart</a>
+                <a href="/cart">Cart</a>
                 <a href="">MyAccount</a>
                 <a href="/users/logout" class="text-red-700">Logout</a>
             </div>
