--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -30,7 +30,7 @@
                 <a class="block w-fit mb-2" href="">Discount</a>
             </div>
         </div>
-        <div class="w-[75%] flex flex-col gap-5 h-screen">
+        <div class="w-[75%] flex gap-5 h-screen">
             <div class="flex items-start gap-5">
                 <% products.forEach(function(product){ %>
                     <div class="w-60">
