--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -3,10 +3,10 @@
     
     <div class="w-full h-screen flex items-start px-20 py-20 gap-10">
         <div class="w-[30%] rounded-md overflow-hidden">
-            <div class="w-full h-80 bg-[#222]">
-                <img class="h-[12rem]" src="data.image/jpeg;base64,<%=product.image.toString('base64')%>" alt="">
+            <div class="w-full flex justify-center items-center h-80 bg-[<%= product.bgcolor %>]">
+                <img class="h-[15rem]" src="data:image/jpeg;base64,<%=product.image.toString('base64')%>" alt="">
             </div>
-            <div class="w-full flex justify-between px-5 py-4">
+            <div class="w-full flex justify-between px-5 py-4 bg-[<%= product.panelcolor %>]">
                 <h3 class="text-2xl"><%= product.name %></h3>
                 <div class="flex items-center gap-2">
                     <i class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-add-line"></i>
@@ -14,9 +14,9 @@
                     <i class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-subtract-line"></i>
                 </div>
             </div>
-            <div class="flex items-center justify-between px-5 py-3">
-                <h4 class="text-lg">Net Total</h4>
-                <h2 class="text-lg">₹ <%= product.price %></h2>
+            <div class="flex items-center justify-between px-5 py-3 bg-[<%= product.textcolor %>]">
+                <h4 class="text-lg text-white">Net Total</h4>
+                <h2 class="text-lg text-white">₹ <%= product.price %></h2>
             </div>
         </div>
         <div class="w-[70%]">
@@ -42,7 +42,7 @@
             <div class="w-full h-[1px] bg-black mt-10"></div>
             <div class="flex mt-5">
                 <h3 class="w-1/3 text-xl">Total Amount</h3>
-                <h3 class="font-semibold text-xl text-green-600">₹ 1940</h3>
+                <h3 class="font-semibold text-xl text-green-600">₹ 1900</h3>
             </div>
             <form action=""></form>
         </div>
