--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,4 +1,13 @@
 <%- include('./partials/header') %>
+
+<% if(success.length>0){ %>
+    <div class="absolute top-5 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-md bg-blue-500">
+        <span class="inline-block mt-1 mb-1 text-white">
+            <%= success %>
+        </span>
+    </div>
+    <% } %>
+
  <% user.cart.forEach(product => {%>
     
     <div class="w-full h-screen flex items-start px-20 py-20 gap-10">
@@ -9,6 +18,7 @@
             <div class="w-full flex justify-between px-5 py-4 bg-[<%= product.panelcolor %>]">
                 <h3 class="text-2xl"><%= product.name %></h3>
                 <div class="flex items-center gap-2">
+                    <a href="/delete/<%= product._id %>"><i class="fa-solid fa-trash text-red-500 flex justify-center items-center "></i></a>
                     <i class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-add-line"></i>
                     <div class="px-2 py-1 rounded-md bg-white text-black">01</div>
                     <i class="w-7 h-7 bg-white flex rounded-full items-center justify-center ri-subtract-line"></i>
